--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -1,7 +1,36 @@
+beautiful==0.0.2
+beautifulsoup4==4.8.2
+blinker==1.4
+blpapi==3.14.0
+bs4==0.0.1
+certifi==2019.11.28
+chardet==3.0.4
 click==7.1.1
 Flask==1.1.2
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.4.1
 Frozen-Flask==0.15
+GoogleNews==1.3.8
+heroku==0.1.4
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
+lxml==4.5.0
 MarkupSafe==1.1.1
+numpy==1.18.2
+pandas==1.0.3
+python-dateutil==1.5
+pytz==2019.3
+realtime-stock==1.0.0
+requests==2.23.0
+simplejson==3.17.0
+six==1.14.0
+soup==0.1.0
+soupsieve==2.0
+SQLAlchemy==1.3.16
+stockquotes==2.0.0
+urllib3==1.25.8
 Werkzeug==1.0.1
+wikipedia==1.4.0
+xlrd==1.2.0
+yahoo-finance==1.4.0
