--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -1,39 +1,26 @@
 beautifulsoup4==4.9.0
-bleach==1.5.0
 bs4==0.0.1
-certifi==2020.4.5.1
-chardet==3.0.4
-click==7.1.2
-cycler==0.10.0
 enum34==1.1.6
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.1
+gunicorn==20.0.4
 h5py==2.7.1
 html5lib==0.9999999
 idna==2.9
-itsdangerous==1.1.0
 Jinja2==2.11.2
-Keras==2.1.2
 lxml==4.5.0
 Markdown==2.6.10
 MarkupSafe==1.1.1
 matplotlib==2.1.1
 numpy==1.13.3
-olefile==0.44
 pandas==0.23.4
-Pillow==4.3.0
 protobuf==3.5.1
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
 PyYAML==3.12
 requests==2.23.0
-scipy==1.0.0
-six==1.11.0
 soupsieve==2.0
 SQLAlchemy==1.3.16
 stockquotes==2.0.0
-tensorflow==1.3.0
-tensorflow-tensorboard==0.1.8
 urllib3==1.25.9
-Werkzeug==1.0.1
